Align titles and text to left and set correct margins

--- a/src/components/intro_narrative/_intro_narrative.scss
+++ b/src/components/intro_narrative/_intro_narrative.scss
@@ -23,21 +23,25 @@
   }
 }
 
+.intro-narrative__text {
+  color: $feature-copy;
+  line-height: 1.8;
+  margin: 0 auto 3rem;
+  text-align: left;
+
+  @media (min-width: $min-480) {
+    font-size: 2.1rem;
+    max-width: 80%;
+  }
+}
+
 .intro-narrative__title {
   @include h2();
 
-  font-size: 1.5 * $font-size;
-  text-align: center;
-  margin: 0 auto auto;
-}
-
-.intro-narrative__text {
-  color: $feature-copy;
-  font-size: $font-size;
-  font-style: italic;
+  text-align: left;
   line-height: 1.8;
   margin: 0 auto 3rem;
-  text-align: center;
+  font-weight: bold;
 
   @media (min-width: $min-480) {
     font-size: 2.1rem;
